# gesture_rec_demo

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: gesture_interaction.launch  multi_kinect.launch  person_record.launch  rosbridge_ws.launch  speech_launch.launch  tracker_demo.launch  tracker_remap.launch
src/: gesture.cpp  gesture.cpp~  gesture_replay.py  gesture_simulation.py  h2r_gesture.cpp  h2r_gesture.py  object_pointer.py  overlay_shapes.py  rec_obj_relay.cpp  record_speech.sh  ros_demo.html  ros_speech.html  speech_cli.py  speech_launch.sh
src/data/: shit.txt
src/object_lists/: list1.txt
