<?xml version="1.0"?>
<package>
  <name>baxter_gesture</name>
  <version>0.7.0</version>
  <description>Gesture recognition package</description>
  <license>TODO</license>
  <maintainer email="meldon@cs.brown.edu">meldon</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>openni_tracker</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <export></export>


</package>
